# AndroidRemoteControl

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/arc/prith/androidremotecontrol/: ExampleInstrumentedTest.java  MainActivityTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: NetworkController.cpp  NetworkController.h  PersistentDataManager.cpp  PersistentDataManager.h  Saveable.cpp  Saveable.h  VideoPlayer.cpp  VideoPlayer.h  enums.h  helper.h  native-lib.cpp
app/src/main/java/com/arc/prith/androidremotecontrol/: MainActivity.java  SettingsActivity.java
app/src/main/res/layout/: activity_main.xml  activity_settings.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/arc/prith/androidremotecontrol/: ExampleUnitTest.java
