cmake_minimum_required(VERSION 3.4.1)

add_library(native-lib SHARED src/main/cpp/native-lib.cpp )
add_library(PersistentDataManager SHARED src/main/cpp/PersistentDataManager.cpp)
add_library(NetworkController SHARED src/main/cpp/NetworkController.cpp)
add_library(VideoPlayer SHARED src/main/cpp/VideoPlayer.cpp)
add_library(Saveable SHARED src/main/cpp/Saveable.cpp)
find_library(log-lib log )
target_link_libraries( native-lib ${log-lib} )
target_link_libraries( native-lib PersistentDataManager )
target_link_libraries( native-lib NetworkController )
target_link_libraries( native-lib VideoPlayer )
target_link_libraries( VideoPlayer NetworkController )
target_link_libraries( VideoPlayer PersistentDataManager )
target_link_libraries( Saveable PersistentDataManager )
target_link_libraries( VideoPlayer Saveable )
target_link_libraries( NetworkController Saveable )